// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WritePostScreen component renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#323232",
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 65,
          "justifyContent": "center",
          "width": 750,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <Image
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      source={
        Object {
          "uri": "feed_rn_close_button",
        }
      }
      style={
        Array [
          Object {
            "height": 25,
            "marginLeft": 5,
            "tintColor": "#FFFFFF",
            "width": 25,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": 30,
            "zIndex": 5,
          },
          Object {
            "tintColor": "#FFFFFF99",
          },
        ]
      }
      testID={undefined}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "top": 32,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      Write a Post
    </Text>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "position": "absolute",
          "right": 12,
          "top": 31,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 18,
              "fontWeight": "600",
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        Post
      </Text>
    </View>
  </View>
  <TextInput
    autoFocus={true}
    multiline={true}
    onChangeText={[Function]}
    placeholder="Write a post..."
    placeholderTextColor="#BBBAC1"
    selectionColor="#3350EE"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#000000",
          "fontSize": 20,
          "paddingHorizontal": 10,
          "paddingTop": 15,
          "textAlignVertical": "top",
          "width": 750,
        },
        Object {
          "height": 1224,
        },
      ]
    }
    value=""
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "width": 750,
        },
        Object {
          "backgroundColor": undefined,
        },
        Object {
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 10,
            "flexDirection": "column",
            "height": 22,
            "justifyContent": "center",
            "marginLeft": 11,
          },
          Object {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 10,
              "flexDirection": "column",
              "height": 22,
              "justifyContent": "center",
              "paddingHorizontal": 5,
            },
            Object {
              "backgroundColor": "#FFFFFF46",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 10,
              },
              Object {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          0/280
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WritePostScreen component renders correctly when only facebook is available 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#323232",
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 65,
          "justifyContent": "center",
          "width": 750,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <Image
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      source={
        Object {
          "uri": "feed_rn_close_button",
        }
      }
      style={
        Array [
          Object {
            "height": 25,
            "marginLeft": 5,
            "tintColor": "#FFFFFF",
            "width": 25,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": 30,
            "zIndex": 5,
          },
          Object {
            "tintColor": "#FFFFFF99",
          },
        ]
      }
      testID={undefined}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "top": 32,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      Write a Post
    </Text>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "position": "absolute",
          "right": 12,
          "top": 31,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 18,
              "fontWeight": "600",
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        Post
      </Text>
    </View>
  </View>
  <TextInput
    autoFocus={true}
    multiline={true}
    onChangeText={[Function]}
    placeholder="Write a post..."
    placeholderTextColor="#BBBAC1"
    selectionColor="#3350EE"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#000000",
          "fontSize": 20,
          "paddingHorizontal": 10,
          "paddingTop": 15,
          "textAlignVertical": "top",
          "width": 750,
        },
        Object {
          "height": 1224,
        },
      ]
    }
    value=""
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "width": 750,
        },
        Object {
          "backgroundColor": undefined,
        },
        Object {
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 10,
            "flexDirection": "column",
            "height": 22,
            "justifyContent": "center",
            "marginLeft": 11,
          },
          Object {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 10,
              "flexDirection": "column",
              "height": 22,
              "justifyContent": "center",
              "paddingHorizontal": 5,
            },
            Object {
              "backgroundColor": "#FFFFFF46",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 10,
              },
              Object {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          0/280
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WritePostScreen component renders correctly when only twitter is available 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#323232",
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 65,
          "justifyContent": "center",
          "width": 750,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <Image
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      source={
        Object {
          "uri": "feed_rn_close_button",
        }
      }
      style={
        Array [
          Object {
            "height": 25,
            "marginLeft": 5,
            "tintColor": "#FFFFFF",
            "width": 25,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": 30,
            "zIndex": 5,
          },
          Object {
            "tintColor": "#FFFFFF99",
          },
        ]
      }
      testID={undefined}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "top": 32,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      Post a Tweet
    </Text>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "position": "absolute",
          "right": 12,
          "top": 31,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 18,
              "fontWeight": "600",
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        Tweet
      </Text>
    </View>
  </View>
  <TextInput
    autoFocus={true}
    multiline={true}
    onChangeText={[Function]}
    placeholder="Write a post..."
    placeholderTextColor="#BBBAC1"
    selectionColor="#3350EE"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#000000",
          "fontSize": 20,
          "paddingHorizontal": 10,
          "paddingTop": 15,
          "textAlignVertical": "top",
          "width": 750,
        },
        Object {
          "height": 1224,
        },
      ]
    }
    value=""
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "width": 750,
        },
        Object {
          "backgroundColor": undefined,
        },
        Object {
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 10,
            "flexDirection": "column",
            "height": 22,
            "justifyContent": "center",
            "marginLeft": 11,
          },
          Object {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 10,
              "flexDirection": "column",
              "height": 22,
              "justifyContent": "center",
              "paddingHorizontal": 5,
            },
            Object {
              "backgroundColor": "#FFFFFF46",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 10,
              },
              Object {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          0/280
        </Text>
      </View>
    </View>
  </View>
</View>
`;
